tests/baselines/reference/uncaughtCompilerError2.errors.txt
uncaughtCompilerError2.ts(2,5): error TS1109: Expression expected.


==== uncaughtCompilerError2.ts (1 errors) ====
    function getObj() {
       ().toString();
        ~
!!! error TS1109: Expression expected.
    }
    